# ByteBlaster

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_admin_and_categories.py  0003_tags.py  0004_user_favorites.py  0005_sound_duration.py  0006_mutemaster.py  0007_user_ban.py
backend/app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
backend/app/routers/: categories.py  editor.py  explore.py  global_mute.py  me.py  plays.py  sounds.py  stats.py  tags.py  users.py
backend/app/services/: ban.py  download.py  editor.py  global_mute.py  ratelimit.py  storage.py  tags.py  votes.py
backend/app/ws/: manager.py  router.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: README.md  index.ts  schema.d.ts
frontend/src/components/: AccessGrantedOverlay.vue  ActiveUsersPanel.vue  AdminPanel.vue  BanLockOverlay.vue  CategoriesManager.vue  ClaimUsernameDialog.vue  ConfirmDialog.vue  EditSoundDialog.vue  EditorView.vue  ExploreLocal.vue  ExploreView.vue  ExploreYoutube.vue  GovBootOverlay.vue  HotkeyBindDialog.vue  LocalImportDialog.vue  MatrixRain.vue  MoneyBootOverlay.vue  MoneyHud.vue  MoneyRain.vue  MostPlayedPanel.vue  PlayHistoryPanel.vue  SoundBoard.vue  (+14 more)
scripts/: backfill-durations.sh  backup-db.sh  backup-sounds.sh  generate-client.sh  load-demo-sounds.sh  restore-db.sh
sounds/: README.md
(+35 files in other folders)
